fix: cache upto 5 searches refactor: divided code into functions fix: updated extension icons fix: shifted header to topn right

--- a/css/result_card.css
+++ b/css/result_card.css
@@ -1,15 +1,12 @@
-.card {
+.gptxCard {
   width: 70%;
-  max-height: 10%;
-  border: 0.2px solid #373b3e;
   border-radius: 10px;
   border-width: "0.2px";
   padding: 10px;
   font-size: 16px;
-  overflow-y: auto;
   margin-bottom: 30px;
 }
-#loadingPara {
+#gptxLoadingPara {
   text-align: right;
   width: 100%;
   display: inline;
@@ -18,17 +15,33 @@
   font-size: 12px;
   font-weight: 700;
 }
-#timePara {
+#gptxTimePara {
   text-align: right;
   font-size: 12px;
   color: #828282;
-  margin-top: 1px;
+  margin-top: -16px;
   margin-left: 3px;
 }
-#response {
+#gptxCardBody {
+  width: 100%;
+  overflow-y: auto;
+  max-height: 225px;
+}
+#gptxResponsePara {
   width: 100%;
   overflow-wrap: break-word;
   white-space: pre-wrap;
   font-size: 14px;
-  margin-top: -18px;
+  margin-top: -4px;
 }
+/* #gptxCardFooter {
+  display: none;
+  position: sticky;
+  bottom: 0;
+  height: 20px;
+  display: flex;
+  justify-content: end;
+}
+#gptxFooterRefreshIcon {
+  display: none;
+} */
